Update and rename linux-in-windows.md to linux-in-windows.html

--- a/linux-in-windows.html
+++ b/linux-in-windows.html
@@ -1,4 +1,11 @@
-Ada beberapa cara untuk menggunakan Linux di Windows. Berikut ini beberapa opsi yang mungkin dapat Anda pertimbangkan:
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Title of the document</title>
+</head>
+<body>
+
+<p>Ada beberapa cara untuk menggunakan Linux di Windows. Berikut ini beberapa opsi yang mungkin dapat Anda pertimbangkan:
 
 1. **Virtual Machine (Mesin Virtual)**: Anda dapat menggunakan perangkat lunak virtualisasi seperti VirtualBox atau VMware untuk membuat mesin virtual Linux di dalam Windows. Unduh dan instal perangkat lunak tersebut, lalu unduh file gambar ISO dari distribusi Linux yang Anda inginkan. Gunakan perangkat lunak virtualisasi untuk membuat mesin virtual baru, lalu instal Linux di dalam mesin virtual tersebut.
 
@@ -9,3 +16,8 @@ Ada beberapa cara untuk menggunakan Linux di Windows. Berikut ini beberapa opsi 
 4. **Linux di Cloud**: Anda juga dapat menggunakan layanan cloud seperti Amazon EC2, Google Compute Engine, atau Microsoft Azure untuk membuat mesin virtual Linux. Anda akan dapat mengakses mesin virtual tersebut melalui koneksi internet dan menggunakannya seperti mesin virtual biasa.
 
 Pilihan mana yang terbaik untuk Anda tergantung pada kebutuhan dan preferensi pribadi Anda. Jika Anda hanya ingin mencoba-coba Linux tanpa mengganggu instalasi Windows, menggunakan mesin virtual atau WSL mungkin merupakan opsi yang lebih mudah. Namun, jika Anda berencana untuk menggunakan Linux secara intensif atau mengembangkan perangkat lunak di atasnya, instalasi ganda atau menggunakan layanan cloud mungkin lebih sesuai.
+</p>
+
+</body>
+</html> 
+
