--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <body>
   <a href="linux-in-windows.html"> linux di windows <a/>
+  <a href="listrik-dan-elektro.html">listrik dan elektro<a/>
 </body>
