--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
   <a href="linux-in-windows.html"> linux di windows <a/>
   <a href="listrik-dan-elektro.html">listrik dan elektro<a/>
   <a href="nodejs-rest-api.html">Node Js REST API<a/>
+  <a href="Konfigurasi-VBox.html">Konfigurasi-VBox<a/>
 </body>
